# Pipes

./: Makefile.am  Makefile.in  Readme.txt  ipc.c  main.c  process.h
