## Process this file with automake to produce Makefile.in

## Created by Anjuta

AM_CPPFLAGS = \
	-DPACKAGE_LOCALE_DIR=\""$(localedir)"\" \
	-DPACKAGE_SRC_DIR=\""$(srcdir)"\" \
	-DPACKAGE_DATA_DIR=\""$(pkgdatadir)"\"

AM_CFLAGS =\
	 -Wall\
	 -g

bin_PROGRAMS = pipes

pipes_SOURCES = \
	main.c \
	common.h \
	ipc.h \
	pa1.h \
	process.h \
	ipc.c

pipes_LDFLAGS = 

pipes_LDADD = 

